<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Input amount here" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_pax" />

        <EditText
            android:id="@+id/num_pax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/input_num_of_pax_here" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/sys"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="ToggleButton"
            android:textOff="@string/no_sys"
            android:textOn="@string/sys" />

        <ToggleButton
            android:id="@+id/gst"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="ToggleButton"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/discount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/input_discount_here" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bill" />

        <TextView
            android:id="@+id/each"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_pays"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/reset" />

    </LinearLayout>







</LinearLayout>
